Fix build version